tests/compile_fail/skip_with_default.stderr
error: skip cannot be combined with other setting attributes
 --> tests/compile_fail/skip_with_default.rs:6:5
  |
6 |     port: u16,
  |     ^^^^
